--- a/activities/investment-odyssey/leaderboard.html
+++ b/activities/investment-odyssey/leaderboard.html
@@ -242,17 +242,18 @@
                             <table class="table table-hover">
                                 <thead class="thead-light">
                                     <tr>
-                                        <th scope="col" width="10%">Rank</th>
-                                        <th scope="col" width="30%">Player</th>
-                                        <th scope="col" width="20%">Section</th>
-                                        <th scope="col" width="20%">Final Portfolio</th>
-                                        <th scope="col" width="20%">Date</th>
+                                        <th scope="col" width="8%">Rank</th>
+                                        <th scope="col" width="25%">Player</th>
+                                        <th scope="col" width="15%">Section</th>
+                                        <th scope="col" width="15%">Final Portfolio</th>
+                                        <th scope="col" width="15%">Return</th>
+                                        <th scope="col" width="15%">Date</th>
                                     </tr>
                                 </thead>
                                 <tbody id="single-leaderboard-body">
                                     <!-- Single player leaderboard entries will be populated dynamically -->
                                     <tr>
-                                        <td colspan="5" class="text-center py-4">
+                                        <td colspan="6" class="text-center py-4">
                                             <div class="spinner-border text-primary" role="status">
                                                 <span class="sr-only">Loading...</span>
                                             </div>
@@ -321,17 +322,18 @@
                             <table class="table table-hover">
                                 <thead class="thead-light">
                                     <tr>
-                                        <th scope="col" width="10%">Rank</th>
-                                        <th scope="col" width="30%">Player</th>
-                                        <th scope="col" width="20%">Section</th>
-                                        <th scope="col" width="20%">Final Portfolio</th>
-                                        <th scope="col" width="20%">Date</th>
+                                        <th scope="col" width="8%">Rank</th>
+                                        <th scope="col" width="25%">Player</th>
+                                        <th scope="col" width="15%">Section</th>
+                                        <th scope="col" width="15%">Final Portfolio</th>
+                                        <th scope="col" width="15%">Return</th>
+                                        <th scope="col" width="15%">Date</th>
                                     </tr>
                                 </thead>
                                 <tbody id="class-leaderboard-body">
                                     <!-- Class game leaderboard entries will be populated dynamically -->
                                     <tr>
-                                        <td colspan="5" class="text-center py-4">
+                                        <td colspan="6" class="text-center py-4">
                                             <div class="spinner-border text-primary" role="status">
                                                 <span class="sr-only">Loading...</span>
                                             </div>
@@ -363,17 +365,18 @@
                             <table class="table table-hover">
                                 <thead class="thead-light">
                                     <tr>
-                                        <th scope="col" width="10%">Rank</th>
-                                        <th scope="col" width="30%">Player</th>
-                                        <th scope="col" width="20%">Section</th>
-                                        <th scope="col" width="20%">Final Portfolio</th>
-                                        <th scope="col" width="20%">Date</th>
+                                        <th scope="col" width="8%">Rank</th>
+                                        <th scope="col" width="25%">Player</th>
+                                        <th scope="col" width="15%">Section</th>
+                                        <th scope="col" width="15%">Final Portfolio</th>
+                                        <th scope="col" width="15%">Return</th>
+                                        <th scope="col" width="15%">Date</th>
                                     </tr>
                                 </thead>
                                 <tbody id="overall-leaderboard-body">
                                     <!-- Overall leaderboard entries will be populated dynamically -->
                                     <tr>
-                                        <td colspan="5" class="text-center py-4">
+                                        <td colspan="6" class="text-center py-4">
                                             <div class="spinner-border text-primary" role="status">
                                                 <span class="sr-only">Loading...</span>
                                             </div>
