--- a/activities/investment-odyssey/about.html
+++ b/activities/investment-odyssey/about.html
@@ -99,6 +99,7 @@
                 <div class="container mx-auto">
                     <div class="nav-links">
                         <a href="../../index.html">Home</a>
+                        <a href="../../games.html">Games</a>
                         <a href="../../activities/index.html">Activities</a>
                         <a href="about.html" class="active">About</a>
                         <a href="index.html">Play Game</a>
