--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -168,6 +168,7 @@
                 <div class="container mx-auto">
                     <div class="nav-links">
                         <a href="../../index.html">Home</a>
+                        <a href="../../games.html">Games</a>
                         <a href="../../activities/index.html">Activities</a>
                         <a href="about.html">About</a>
                         <a href="index.html">Play Game</a>
@@ -175,8 +176,8 @@
                         <a href="leaderboard.html">Leaderboard</a>
                         <a href="statistics.html">Statistics</a>
                     </div>
-                    <h1 class="banner-title">Investment Odyssey</h1>
-                    <p class="banner-subtitle">Class Game Mode</p>
+                    <h1 class="activity-title">Investment Odyssey</h1>
+                    <p class="activity-date">Class Game Mode</p>
                 </div>
             </div>
         </div>
