--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -96,6 +96,7 @@
                 <div class="container mx-auto">
                     <div class="nav-links">
                         <a href="../../index.html">Home</a>
+                        <a href="../../games.html">Games</a>
                         <a href="../../activities/index.html">Activities</a>
                         <a href="about.html">About</a>
                         <a href="index.html" class="active">Play Game</a>
@@ -168,7 +169,7 @@
                                 <thead>
                                     <tr>
                                         <th>Asset</th>
-                                        <th>Price</th> 
+                                        <th>Price</th>
                                         <th>Change</th>
                                         <th>Quantity</th>
                                         <th>Value</th>
