--- a/activities/investment-odyssey/leaderboard.html
+++ b/activities/investment-odyssey/leaderboard.html
@@ -79,6 +79,7 @@
                 <div class="container mx-auto">
                     <div class="nav-links">
                         <a href="../../index.html">Home</a>
+                        <a href="../../games.html">Games</a>
                         <a href="../../activities/index.html">Activities</a>
                         <a href="about.html">About</a>
                         <a href="index.html">Play Game</a>
@@ -86,8 +87,8 @@
                         <a href="leaderboard.html" class="active">Leaderboard</a>
                         <a href="statistics.html">Statistics</a>
                     </div>
-                    <h1 class="banner-title">Investment Odyssey Leaderboard</h1>
-                    <p class="banner-subtitle">See how your investment skills compare to others!</p>
+                    <h1 class="activity-title">Investment Odyssey</h1>
+                    <p class="activity-date">Leaderboard - See how your investment skills compare to others!</p>
                 </div>
             </div>
         </div>
