--- a/activities/investment-odyssey/statistics.html
+++ b/activities/investment-odyssey/statistics.html
@@ -62,24 +62,27 @@
         }
     </style>
 </head>
-<body>
+<body class="bg-gray-50">
     <!-- Header -->
-    <header class="bg-gray-800 text-white p-4">
-        <div class="container mx-auto flex justify-between items-center">
-            <div>
-                <h1 class="text-2xl font-bold">Investment Odyssey</h1>
-                <p class="text-sm">Your Personal Statistics</p>
+    <header>
+        <div class="banner-container">
+            <img src="../../images/banner15.png" alt="Investment Odyssey Banner" class="banner-image">
+            <div class="banner-overlay">
+                <div class="container mx-auto">
+                    <div class="nav-links">
+                        <a href="../../index.html">Home</a>
+                        <a href="../../games.html">Games</a>
+                        <a href="../../activities/index.html">Activities</a>
+                        <a href="about.html">About</a>
+                        <a href="index.html">Play Game</a>
+                        <a href="class-game.html">Class Game</a>
+                        <a href="leaderboard.html">Leaderboard</a>
+                        <a href="statistics.html" class="active">Statistics</a>
+                    </div>
+                    <h1 class="activity-title">Investment Odyssey</h1>
+                    <p class="activity-date">Your Personal Statistics</p>
+                </div>
             </div>
-            <nav>
-                <ul class="flex space-x-4">
-                    <li><a href="../../index.html" class="hover:text-blue-300">Home</a></li>
-                    <li><a href="../../activities/index.html" class="hover:text-blue-300">Activities</a></li>
-                    <li><a href="about.html" class="hover:text-blue-300">About</a></li>
-                    <li><a href="index.html" class="hover:text-blue-300">Play Game</a></li>
-                    <li><a href="leaderboard.html" class="hover:text-blue-300">Leaderboard</a></li>
-                    <li><a href="statistics.html" class="hover:text-blue-300 font-bold">Statistics</a></li>
-                </ul>
-            </nav>
         </div>
     </header>
 
