--- a/activities/index.html
+++ b/activities/index.html
@@ -7,20 +7,14 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <style>
+  /* Banner styles */
   .banner-container {
     position: relative;
-    width: 100%;
-    height: 0;
-    padding-bottom: 20%; /* Slightly shorter aspect ratio */
-    min-height: 120px; /* Minimum height on small screens */
-    max-height: 300px; /* Maximum height on large screens */
+    height: 300px;
     overflow: hidden;
   }
 
   .banner-image {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -30,46 +24,63 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7));
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 2rem;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.4);
     color: white;
+    padding: 2rem;
+  }
+
+  .nav-links {
+    margin-bottom: 2rem;
+  }
+
+  .nav-links a {
+    color: rgba(255,255,255,0.8);
+    text-decoration: none;
+    margin-right: 1.5rem;
+    font-weight: 300;
+  }
+
+  .nav-links a:hover {
+    color: white;
+  }
+
+  .nav-links a.active {
+    color: white;
+    font-weight: bold;
   }
 
   .page-title {
     font-size: 2.5rem;
-    font-weight: 700;
+    font-weight: 300;
     margin-bottom: 0.5rem;
-  }
-
-  .page-subtitle {
-    font-size: 1.25rem;
-    opacity: 0.9;
-  }
-
-  .back-link {
-    color: rgba(255, 255, 255, 0.8);
-    text-decoration: none;
-    display: inline-flex;
-    align-items: center;
-    font-size: 1rem;
-    transition: color 0.2s;
-  }
-
-  .back-link:hover {
     color: white;
   }
 
+  .page-subtitle {
+    font-size: 1.1rem;
+    font-weight: 300;
+    color: rgba(255,255,255,0.8);
+  }
+
+  /* Responsive adjustments */
   @media (max-width: 768px) {
-    .page-title {
-      font-size: 1.75rem;
+    .banner-container {
+      height: 200px;
     }
+
+    .page-title {
+      font-size: 1.8rem;
+    }
+
     .page-subtitle {
-      font-size: 1rem;
+      font-size: 0.9rem;
+    }
+
+    .nav-links a {
+      font-size: 0.9rem;
+      margin-right: 1rem;
     }
   }
 </style>
@@ -78,11 +89,13 @@
 <body class="bg-gray-50">
 <header>
   <div class="banner-container">
-    <img src="../images/banner10.png" alt="Banner" class="banner-image">
+    <img src="../images/banner15.png" alt="Banner" class="banner-image">
     <div class="banner-overlay">
-      <div class="flex items-center mb-2">
-        <a href="../index.html" class="back-link mr-4">← Back to Home</a>
-        <a href="../games.html" class="back-link">← Games Home</a>
+      <div class="nav-links">
+        <a href="../index.html">Home</a>
+        <a href="../games.html">Games</a>
+        <a href="index.html" class="active">Activities</a>
+        <a href="../materials.html">Materials</a>
       </div>
       <h1 class="page-title">Discussion Activities</h1>
       <p class="page-subtitle">Weekly discussion section materials and exercises</p>
