--- a/games.html
+++ b/games.html
@@ -27,10 +27,10 @@
         .games-container {
             margin-top: 30px;
         }
+        /* Banner styles */
         .banner-container {
             position: relative;
-            width: 100%;
-            height: 200px;
+            height: 300px;
             overflow: hidden;
             margin-bottom: 30px;
         }
@@ -43,33 +43,69 @@
             position: absolute;
             top: 0;
             left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            right: 0;
+            bottom: 0;
+            background: rgba(0, 0, 0, 0.4);
             color: white;
-            text-align: center;
+            padding: 2rem;
+        }
+        .nav-links {
+            margin-bottom: 2rem;
+        }
+        .nav-links a {
+            color: rgba(255,255,255,0.8);
+            text-decoration: none;
+            margin-right: 1.5rem;
+            font-weight: 300;
+        }
+        .nav-links a:hover {
+            color: white;
+        }
+        .nav-links a.active {
+            color: white;
+            font-weight: bold;
         }
         .banner-title {
             font-size: 2.5rem;
-            font-weight: bold;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+            font-weight: 300;
+            margin-bottom: 0.5rem;
+            color: white;
         }
         .banner-subtitle {
-            font-size: 1.2rem;
-            margin-top: 10px;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+            font-size: 1.1rem;
+            font-weight: 300;
+            color: rgba(255,255,255,0.8);
+        }
+        /* Responsive adjustments */
+        @media (max-width: 768px) {
+            .banner-container {
+                height: 200px;
+            }
+            .banner-title {
+                font-size: 1.8rem;
+            }
+            .banner-subtitle {
+                font-size: 0.9rem;
+            }
+            .nav-links a {
+                font-size: 0.9rem;
+                margin-right: 1rem;
+            }
         }
     </style>
 </head>
 <body>
     <!-- Header Banner -->
     <div class="banner-container">
-        <img src="images/banner18.png" alt="Economics Games Banner" class="banner-image">
+        <img src="images/banner15.png" alt="Economics Games Banner" class="banner-image">
         <div class="banner-overlay">
-            <div>
+            <div class="container mx-auto">
+                <div class="nav-links">
+                    <a href="index.html">Home</a>
+                    <a href="games.html" class="active">Games</a>
+                    <a href="activities/index.html">Activities</a>
+                    <a href="materials.html">Materials</a>
+                </div>
                 <h1 class="banner-title">Economics Games</h1>
                 <p class="banner-subtitle">Interactive learning experiences for economics students</p>
             </div>
@@ -77,23 +113,9 @@
     </div>
 
     <div class="container">
-        <!-- Navigation -->
-        <nav class="mb-4">
-            <ul class="nav nav-pills">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Course Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="games.html">Games</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="activities/index.html">Activities</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="materials.html">Materials</a>
-                </li>
-            </ul>
-        </nav>
+        <!-- Navigation is now in the banner -->
+        <!-- Removed redundant navigation -->
+
 
         <!-- Authentication Section -->
         <div id="auth-section" class="mb-5">
@@ -158,7 +180,7 @@
                             <h5 class="card-title">Investment Odyssey</h5>
                             <p class="card-text">Navigate financial markets and build your investment portfolio in this interactive simulation game. Learn about different asset classes, risk management, and investment strategies.</p>
                             <div class="mt-3">
-                                <a href="activities/investment-odyssey/about.html" class="btn btn-primary btn-lg">Play Investment Odyssey</a>
+                                <a href="activities/investment-odyssey/about.html" class="btn btn-primary btn-lg">Learn About Investment Odyssey</a>
                             </div>
                         </div>
                     </div>
