--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <p class="mb-4">This website contains resources and activities for your Principles of Macroeconomics course.</p>
 
         <!-- Navigation Cards -->
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-8">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mt-8">
 
             <!-- Discussion Activities Card -->
             <div class="bg-white p-6 rounded-lg shadow-md">
@@ -103,6 +103,13 @@
                 <h3 class="text-xl font-medium mb-2">Course Materials</h3>
                 <p class="text-gray-600 mb-4">Access lecture slides, notes, readings, and other resources.</p>
                 <a href="materials.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">View Materials</a>
+            </div>
+
+            <!-- Real-Time Data Card -->
+            <div class="bg-white p-6 rounded-lg shadow-md">
+                <h3 class="text-xl font-medium mb-2">Real-Time Data</h3>
+                <p class="text-gray-600 mb-4">Interactive visualizations of CPI, GDP, and unemployment data.</p>
+                <a href="real-time-data.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">View Data</a>
             </div>
 
             <!-- FAQ Card -->
