--- a/real-time-data.html
+++ b/real-time-data.html
@@ -208,13 +208,53 @@
         <div>
           <label for="start-year" class="block text-sm font-medium text-gray-700 mb-1">Start Year</label>
           <select id="start-year" class="w-full p-2 border border-gray-300 rounded-md">
-            <!-- Will be populated by JavaScript -->
+            <option value="2005">2005</option>
+            <option value="2006">2006</option>
+            <option value="2007">2007</option>
+            <option value="2008">2008</option>
+            <option value="2009">2009</option>
+            <option value="2010">2010</option>
+            <option value="2011">2011</option>
+            <option value="2012">2012</option>
+            <option value="2013">2013</option>
+            <option value="2014">2014</option>
+            <option value="2015">2015</option>
+            <option value="2016">2016</option>
+            <option value="2017">2017</option>
+            <option value="2018">2018</option>
+            <option value="2019">2019</option>
+            <option value="2020" selected>2020</option>
+            <option value="2021">2021</option>
+            <option value="2022">2022</option>
+            <option value="2023">2023</option>
+            <option value="2024">2024</option>
+            <option value="2025">2025</option>
           </select>
         </div>
         <div>
           <label for="end-year" class="block text-sm font-medium text-gray-700 mb-1">End Year</label>
           <select id="end-year" class="w-full p-2 border border-gray-300 rounded-md">
-            <!-- Will be populated by JavaScript -->
+            <option value="2005">2005</option>
+            <option value="2006">2006</option>
+            <option value="2007">2007</option>
+            <option value="2008">2008</option>
+            <option value="2009">2009</option>
+            <option value="2010">2010</option>
+            <option value="2011">2011</option>
+            <option value="2012">2012</option>
+            <option value="2013">2013</option>
+            <option value="2014">2014</option>
+            <option value="2015">2015</option>
+            <option value="2016">2016</option>
+            <option value="2017">2017</option>
+            <option value="2018">2018</option>
+            <option value="2019">2019</option>
+            <option value="2020">2020</option>
+            <option value="2021">2021</option>
+            <option value="2022">2022</option>
+            <option value="2023">2023</option>
+            <option value="2024">2024</option>
+            <option value="2025" selected>2025</option>
           </select>
         </div>
       </div>
@@ -333,7 +373,7 @@
     await loadCPIData();
 
     // Initialize visualizations
-    initializeYearSelectors();
+    // Skip year selectors initialization since we've hardcoded the options
     initializeCategorySelector();
     createHeatmapTable();
     createLineChart();
@@ -825,12 +865,18 @@
   function setupEventListeners() {
     // Year selectors
     document.getElementById('start-year').addEventListener('change', () => {
+      console.log('Start year changed, updating chart...');
       updateLineChart();
     });
 
     document.getElementById('end-year').addEventListener('change', () => {
+      console.log('End year changed, updating chart...');
       updateLineChart();
     });
+
+    // Trigger an initial update to ensure the chart is rendered with the default values
+    console.log('Triggering initial chart update...');
+    setTimeout(updateLineChart, 500); // Small delay to ensure everything is loaded
   }
 </script>
 </body>
