--- a/real-time-data.html
+++ b/real-time-data.html
@@ -209,61 +209,70 @@
         <div>
           <label for="start-year" class="block text-sm font-medium text-gray-700 mb-1">Start Year</label>
           <select id="start-year" class="w-full p-2 border border-gray-300 rounded-md">
-            <option value="2005">2005</option>
-            <option value="2006">2006</option>
-            <option value="2007">2007</option>
-            <option value="2008">2008</option>
-            <option value="2009">2009</option>
-            <option value="2010">2010</option>
-            <option value="2011">2011</option>
-            <option value="2012">2012</option>
-            <option value="2013">2013</option>
-            <option value="2014">2014</option>
-            <option value="2015">2015</option>
-            <option value="2016">2016</option>
-            <option value="2017">2017</option>
-            <option value="2018">2018</option>
-            <option value="2019">2019</option>
-            <option value="2020" selected>2020</option>
-            <option value="2021">2021</option>
-            <option value="2022">2022</option>
-            <option value="2023">2023</option>
-            <option value="2024">2024</option>
-            <option value="2025">2025</option>
+            <option value="2005" selected>2005</option>
           </select>
         </div>
         <div>
           <label for="end-year" class="block text-sm font-medium text-gray-700 mb-1">End Year</label>
           <select id="end-year" class="w-full p-2 border border-gray-300 rounded-md">
-            <option value="2005">2005</option>
-            <option value="2006">2006</option>
-            <option value="2007">2007</option>
-            <option value="2008">2008</option>
-            <option value="2009">2009</option>
-            <option value="2010">2010</option>
-            <option value="2011">2011</option>
-            <option value="2012">2012</option>
-            <option value="2013">2013</option>
-            <option value="2014">2014</option>
-            <option value="2015">2015</option>
-            <option value="2016">2016</option>
-            <option value="2017">2017</option>
-            <option value="2018">2018</option>
-            <option value="2019">2019</option>
-            <option value="2020">2020</option>
-            <option value="2021">2021</option>
-            <option value="2022">2022</option>
-            <option value="2023">2023</option>
-            <option value="2024">2024</option>
-            <option value="2025" selected>2025</option>
+            <option value="2025" selected>Present</option>
           </select>
         </div>
       </div>
+      <p class="text-sm text-gray-600 mb-4">Showing all available data from 2005 to present.</p>
 
       <!-- Heatmap Visualization -->
       <div class="mb-8">
         <h4 class="text-lg font-semibold mb-3">CPI Heatmap by Category</h4>
         <p class="text-sm text-gray-600 mb-4">This heatmap shows the intensity of 12-month percentage changes in CPI across different categories. Red indicates inflation, blue indicates deflation.</p>
+
+        <!-- Heatmap Date Selector -->
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
+          <div>
+            <label for="heatmap-month" class="block text-sm font-medium text-gray-700 mb-1">Starting Month</label>
+            <select id="heatmap-month" class="w-full p-2 border border-gray-300 rounded-md">
+              <option value="0">January</option>
+              <option value="1">February</option>
+              <option value="2">March</option>
+              <option value="3">April</option>
+              <option value="4">May</option>
+              <option value="5">June</option>
+              <option value="6">July</option>
+              <option value="7">August</option>
+              <option value="8">September</option>
+              <option value="9">October</option>
+              <option value="10">November</option>
+              <option value="11">December</option>
+            </select>
+          </div>
+          <div>
+            <label for="heatmap-year" class="block text-sm font-medium text-gray-700 mb-1">Starting Year</label>
+            <select id="heatmap-year" class="w-full p-2 border border-gray-300 rounded-md">
+              <option value="2005">2005</option>
+              <option value="2006">2006</option>
+              <option value="2007">2007</option>
+              <option value="2008">2008</option>
+              <option value="2009">2009</option>
+              <option value="2010">2010</option>
+              <option value="2011">2011</option>
+              <option value="2012">2012</option>
+              <option value="2013">2013</option>
+              <option value="2014">2014</option>
+              <option value="2015">2015</option>
+              <option value="2016">2016</option>
+              <option value="2017">2017</option>
+              <option value="2018">2018</option>
+              <option value="2019">2019</option>
+              <option value="2020">2020</option>
+              <option value="2021">2021</option>
+              <option value="2022">2022</option>
+              <option value="2023">2023</option>
+              <option value="2024" selected>2024</option>
+              <option value="2025">2025</option>
+            </select>
+          </div>
+        </div>
+
         <div class="overflow-x-auto">
           <table id="cpi-heatmap-table" class="min-w-full border-collapse">
             <thead>
@@ -570,15 +579,16 @@
         return;
       }
 
-      // Log some sample data to verify values
-      console.log('Sample CPI data:', cpiData.slice(0, 3));
+      // Get selected month and year
+      const startMonth = parseInt(document.getElementById('heatmap-month').value);
+      const startYear = parseInt(document.getElementById('heatmap-year').value);
 
-      // Get the most recent 12 months of data
-      const recentData = getRecentMonthsData(12);
-      console.log('Recent data for heatmap:', recentData.length, 'months');
+      // Get 12 months of data starting from selected month/year
+      const heatmapData = getHeatmapData(startYear, startMonth, 12);
+      console.log('Heatmap data:', heatmapData.length, 'months');
 
-      if (recentData.length === 0) {
-        console.error('No recent data available for heatmap');
+      if (heatmapData.length === 0) {
+        console.error('No data available for selected period');
         return;
       }
 
@@ -586,7 +596,7 @@
       const monthRow = document.getElementById('month-row');
       monthRow.innerHTML = '<th class="p-2 border bg-gray-100"></th>'; // Clear and add first cell
 
-      recentData.forEach(monthData => {
+      heatmapData.forEach(monthData => {
         const th = document.createElement('th');
         th.className = 'p-2 border bg-gray-100 text-center';
         th.textContent = `${monthNames[monthData.month]}-${String(monthData.year).slice(2)}`;
@@ -608,7 +618,7 @@
         tr.appendChild(th);
 
         // Value cells
-        recentData.forEach(monthData => {
+        heatmapData.forEach(monthData => {
           const td = document.createElement('td');
           td.className = 'p-2 border text-center';
 
@@ -645,31 +655,57 @@
     }
   }
 
-  // Get the most recent N months of data
-  function getRecentMonthsData(numMonths) {
+  // Get data for a specific time period
+  function getHeatmapData(startYear, startMonth, numMonths) {
     try {
-      console.log('Getting recent months data...');
+      console.log(`Getting heatmap data starting from ${startMonth}/${startYear} for ${numMonths} months...`);
       if (!cpiData || cpiData.length === 0) {
         console.error('No CPI data available');
         return [];
       }
 
-      // Sort data by date (newest first)
+      // Find the starting date (or closest available)
+      const startDate = new Date(startYear, startMonth, 1);
+      console.log('Looking for data starting from:', startDate.toISOString().slice(0, 10));
+
+      // Sort data by date (oldest first)
       const sortedData = [...cpiData].sort((a, b) => {
         // Ensure we have valid dates
         if (!a.date || !b.date) return 0;
-        return b.date - a.date;
+        return a.date - b.date;
       });
 
-      console.log(`Total data points: ${sortedData.length}, taking most recent ${numMonths}`);
+      // Find the index of the closest date to our start date
+      let startIndex = -1;
+      let minDiff = Infinity;
 
-      // Take the most recent N months
-      const recentData = sortedData.slice(0, numMonths).reverse();
-      console.log(`Recent data: ${recentData.length} months, from ${recentData[0]?.date?.toISOString().slice(0, 10)} to ${recentData[recentData.length-1]?.date?.toISOString().slice(0, 10)}`);
+      for (let i = 0; i < sortedData.length; i++) {
+        const diff = Math.abs(sortedData[i].date - startDate);
+        if (diff < minDiff) {
+          minDiff = diff;
+          startIndex = i;
+        }
+      }
 
-      return recentData;
+      if (startIndex === -1) {
+        console.error('Could not find a suitable starting date');
+        return [];
+      }
+
+      console.log(`Found closest date: ${sortedData[startIndex].date.toISOString().slice(0, 10)}`);
+
+      // Take numMonths from the starting index
+      const heatmapData = sortedData.slice(startIndex, startIndex + numMonths);
+
+      if (heatmapData.length < numMonths) {
+        console.warn(`Only found ${heatmapData.length} months of data, less than requested ${numMonths}`);
+      }
+
+      console.log(`Heatmap data: ${heatmapData.length} months, from ${heatmapData[0]?.date?.toISOString().slice(0, 10)} to ${heatmapData[heatmapData.length-1]?.date?.toISOString().slice(0, 10)}`);
+
+      return heatmapData;
     } catch (error) {
-      console.error('Error getting recent months data:', error);
+      console.error('Error getting heatmap data:', error);
       return [];
     }
   }
@@ -702,7 +738,17 @@
           },
           plugins: {
             tooltip: {
+              backgroundColor: 'rgba(255, 255, 255, 0.9)',
+              titleColor: '#000',
+              bodyColor: '#000',
+              borderColor: '#ddd',
+              borderWidth: 1,
+              padding: 10,
               callbacks: {
+                title(tooltipItems) {
+                  const date = new Date(tooltipItems[0].parsed.x);
+                  return date.toLocaleDateString('en-US', { month: 'long', year: 'numeric' });
+                },
                 label(context) {
                   return `${context.dataset.label}: ${context.parsed.y.toFixed(1)}%`;
                 }
@@ -712,7 +758,28 @@
               position: 'top',
               labels: {
                 boxWidth: 15,
-                padding: 10
+                padding: 15,
+                font: {
+                  size: 12
+                }
+              }
+            },
+            annotation: {
+              annotations: {
+                recession2008: {
+                  type: 'box',
+                  xMin: new Date(2007, 11, 1),
+                  xMax: new Date(2009, 5, 30),
+                  backgroundColor: 'rgba(200, 200, 200, 0.2)',
+                  borderWidth: 0
+                },
+                recession2020: {
+                  type: 'box',
+                  xMin: new Date(2020, 1, 1),
+                  xMax: new Date(2020, 3, 30),
+                  backgroundColor: 'rgba(200, 200, 200, 0.2)',
+                  borderWidth: 0
+                }
               }
             }
           },
@@ -728,12 +795,24 @@
               },
               grid: {
                 display: true,
-                color: 'rgba(0, 0, 0, 0.1)'
+                color: 'rgba(0, 0, 0, 0.05)'
               },
               ticks: {
                 source: 'auto',
                 maxRotation: 0,
-                autoSkip: true
+                autoSkip: true,
+                font: {
+                  size: 11
+                }
+              },
+              title: {
+                display: true,
+                text: 'Year',
+                font: {
+                  size: 14,
+                  weight: 'bold'
+                },
+                padding: {top: 10, bottom: 0}
               }
             },
             y: {
@@ -743,12 +822,33 @@
                 callback: function(value) {
                   return value.toFixed(0) + '%';
                 },
-                stepSize: 5
+                stepSize: 5,
+                font: {
+                  size: 11
+                }
               },
               grid: {
                 display: true,
-                color: 'rgba(0, 0, 0, 0.1)'
+                color: 'rgba(0, 0, 0, 0.05)',
+                drawBorder: false
+              },
+              title: {
+                display: true,
+                text: 'Percent Change',
+                font: {
+                  size: 14,
+                  weight: 'bold'
+                },
+                padding: {top: 0, bottom: 10}
               }
+            }
+          },
+          layout: {
+            padding: {
+              top: 10,
+              right: 20,
+              bottom: 10,
+              left: 10
             }
           }
         }
@@ -779,21 +879,13 @@
     try {
       console.log('Preparing line chart data...');
 
-      // Get selected years from dropdowns
-      const startYearSelect = document.getElementById('start-year');
-      const endYearSelect = document.getElementById('end-year');
+      // Always use full date range from 2005 to present
+      const startYear = 2005;
+      const endYear = 2025; // Maximum year in our dataset
 
-      if (!startYearSelect.value || !endYearSelect.value) {
-        console.error('Year selectors not properly initialized');
-        return { datasets: [] };
-      }
+      console.log(`Using full data range from ${startYear} to ${endYear}`);
 
-      const startYear = parseInt(startYearSelect.value);
-      const endYear = parseInt(endYearSelect.value);
-
-      console.log(`Filtering data for years ${startYear} to ${endYear}`);
-
-      // Filter data by selected years
+      // Filter data by year range
       const filteredData = cpiData.filter(row => {
         return row.year >= startYear && row.year <= endYear;
       });
@@ -801,7 +893,7 @@
       console.log(`Filtered data: ${filteredData.length} rows`);
 
       if (filteredData.length === 0) {
-        console.warn('No data available for selected year range');
+        console.warn('No data available');
         return { datasets: [] };
       }
 
@@ -854,9 +946,10 @@
           data: dataPoints,
           borderColor: color,
           backgroundColor: color,
-          borderWidth: category === 'All items' ? 2 : 1,
+          borderWidth: category === 'All items' ? 3 : 2,
           pointRadius: 0,
-          tension: 0.1
+          tension: 0.2,
+          fill: false
         };
       });
 
@@ -877,20 +970,23 @@
 
   // Set up event listeners
   function setupEventListeners() {
-    // Year selectors
-    document.getElementById('start-year').addEventListener('change', () => {
-      console.log('Start year changed, updating chart...');
-      updateLineChart();
+    // Heatmap month/year selectors
+    document.getElementById('heatmap-month').addEventListener('change', () => {
+      console.log('Heatmap month changed, updating heatmap...');
+      createHeatmapTable();
     });
 
-    document.getElementById('end-year').addEventListener('change', () => {
-      console.log('End year changed, updating chart...');
-      updateLineChart();
+    document.getElementById('heatmap-year').addEventListener('change', () => {
+      console.log('Heatmap year changed, updating heatmap...');
+      createHeatmapTable();
     });
 
-    // Trigger an initial update to ensure the chart is rendered with the default values
-    console.log('Triggering initial chart update...');
-    setTimeout(updateLineChart, 500); // Small delay to ensure everything is loaded
+    // Trigger initial updates to ensure visualizations are rendered with default values
+    console.log('Triggering initial visualization updates...');
+    setTimeout(() => {
+      createHeatmapTable();
+      createLineChart(); // Create the line chart once with full date range
+    }, 500); // Small delay to ensure everything is loaded
   }
 </script>
 </body>
